--- a/templates/base.html
+++ b/templates/base.html
@@ -16,4 +16,6 @@
     {% block content %}
     {% endblock %}
 </body>
+
+<script type="text/javascript" src="{% static 'main.js' %}"></script>
 </html>
