--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,7 @@
 body{
     font-family: "Poppins", sans-serif;
     font-size: small;
+    background-color: #F8F8F8;
 }
 
 .card{
@@ -9,23 +10,27 @@ body{
     background-color: white;
     box-shadow: 5px 5px 20px gainsboro;
     max-width: 270px;
-    margin: 50px auto;
+    margin: 10px auto;
     padding: 10px;
     border-radius: 3px;
     align-items: stretch;
+    border:solid 2px#292F36;
 }
 
 .field{
     width: 100%;
     min-height: 30px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     box-sizing: border-box;
     font-family: "Poppins";
     padding: 0px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #main-button{
-    background-color: #FF033E;
+    background-color: #47928D;
     border: none;
     color: white;
     border-radius: 3px; 
@@ -43,7 +48,54 @@ p{
     margin-top: 0;
 }
 
+
 .off{
     display: none;
-    /* visibility: collapse; */
+    visibility: hidden;
+}
+.message{
+    background-color: #47928D;
+    color: white;
+    padding: 10px;
+    margin: 10px auto;
+    border-radius: 3px;
+    border: solid 2px #292F36;
+}
+.info-box{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 10px;
+    color: black;
+}
+
+.sub-button{
+    background-color: #292f36;
+    border: none;
+    color: white;
+    padding: 5px auto;
+    border-radius: 3px;
+}
+
+a{
+    display: block;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+}
+p{
+    text-align: center;
+}
+.view{
+    max-width: 270px;
+    margin: 0px auto;
+}
+h2{
+    margin: 5px 0px;
+    text-align: center;
+}
+
+.ender{
+    display: flex;
+    justify-content: end;
+    font-size: large;
 }
