--- a/static/main.css
+++ b/static/main.css
@@ -99,3 +99,17 @@ h2{
     justify-content: end;
     font-size: large;
 }
+
+.text-space{
+    height: 100px;
+    margin-bottom: 10px;
+    width: 90%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    border-radius: 3px;
+    font-family: 'Poppins';
+    border:solid 1px #292F36;
+    font-size: small;
+    background-color: #f6f6fd;
+    padding: 5px 2.5%;
+}
