fixed weird behaviour when a logged in user is sending a message to himself

--- a/static/main.css
+++ b/static/main.css
@@ -60,6 +60,7 @@ p{
     margin: 10px auto;
     border-radius: 3px;
     border: solid 2px #292F36;
+    min-width: 90%;
 }
 .info-box{
     display: flex;
